misc dotfile changes (magnificent)